refactor:  clean project to only work with onnx files